feat: Phase 8 — Virtual Threads + Structured Concurrency migration
Migrated from ForkJoinPool/CompletableFuture/synchronized to virtual threads (JEP 444):
- AgentLoop.java: ForkJoinPool.commonPool() → Executors.newVirtualThreadPerTaskExecutor()
- AsyncAgentLoop.java: default executor → virtual threads
- ParallelEvolution.java: ForkJoinPool+RecursiveTask → CompletableFuture on virtual threads
- ThreadSafeNeuronLayer.java: ReentrantReadWriteLock → StampedLock (virtual-thread-friendly)
- EvolutionLoop.java: added runParallel() with concurrent population evaluation
- AgentBrainService.java: synchronized → ReentrantLock, Random → ThreadLocalRandom in act()
- ArchitectureEvaluator.java: newFixedThreadPool → newVirtualThreadPerTaskExecutor()
- MatrixTrainingEngine.java: verification step uses virtual threads

All tests pass (concurrent, evolution, agent, NAS, training suites).